@@ -244,7 +244,12 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
        */
       virtual
       ~basic_filebuf()
-      { this->close(); }
+      {
+	__try
+	  { this->close(); }
+	__catch(...)
+	  { }
+      }
 
 #if __cplusplus >= 201103L
       basic_filebuf& operator=(const basic_filebuf&) = delete;
